# ANTIVIRUS_CPP_PROFESSIONAL

./: DOCUMENTO_ARQUITECTURA_SOFTWARE_RUP.md  simple_logs.db
ANTIVIRUS_CPP_PROFESSIONAL/: .gitignore  INSTALL_GUIDE.md  README.md  install_dependencies.ps1  quick_setup.ps1  setup.bat  setup.sh  verify_installation.ps1  verify_simple.ps1
ANTIVIRUS_CPP_PROFESSIONAL/backend/: CMakeLists.txt  CMakeLists_original.txt  CMakeLists_simple.txt  compile.bat  simple_main.cpp
ANTIVIRUS_CPP_PROFESSIONAL/backend/include/: onnxruntime_cxx_api.h
ANTIVIRUS_CPP_PROFESSIONAL/backend/src/: main.cpp  main_simple.cpp
ANTIVIRUS_CPP_PROFESSIONAL/backend/src/api/: APIServer.cpp  APIServer.hpp
ANTIVIRUS_CPP_PROFESSIONAL/backend/src/core/: DetectionEngine.cpp  DetectionEngine.hpp  SystemMonitor.hpp  ThreatProcessor.hpp  Types.hpp
ANTIVIRUS_CPP_PROFESSIONAL/backend/src/ml/: MLEngine.cpp  MLEngine.hpp
ANTIVIRUS_CPP_PROFESSIONAL/backend/src/plugins/: IDetector.hpp
ANTIVIRUS_CPP_PROFESSIONAL/backend/src/utils/: CircularBuffer.hpp  ThreadPool.hpp
ANTIVIRUS_CPP_PROFESSIONAL/frontend/: index.html  main.js  package-lock.json  package.json  preload.js  webpack.config.js
UNIFIED_ANTIVIRUS/: .coverage  .flake8  .gitignore  ANALISIS_MEJORES_TESTS_TDD.md  ARCHITECTURE_HYBRID.md  BACKEND_COMPLETO_FUNCIONAL.md  COMO_FUNCIONA_TECHNICAL_README.md  DEPLOYMENT_VERCEL.md  DEVELOPER_GUIDE.md  DIAGRAMA_ARQUITECTURA.md  GUIA_ESTUDIO.md  LIBRETO_VIDEO.md  MONITOREO_WEB_LOGS.md  Make.ps1  PROJECT_STRUCTURE.md  PlantUML_Instructions.md  README.md  README_WEB_MONITOR.md  README_WEB_MONITORING.md  RESUMEN_MEJORAS_SISTEMA.md  SISTEMA_WEB_COMPLETADO.md  SOLUCION_URL_VERCEL.md  WEB_INTEGRATION_STATUS.md  WEB_MONITORING_INTEGRATION_COMPLETE.md  __init__.py  backend_analysis.py  check_dependencies.py  client_monitor_config.json  components.puml  e2e_test_results.json  funcionamientos.md  install_dependencies.py  installer_script.iss  launcher.py  launcher_backup.py  plan-estudio-antivirus-backend.md  production_launcher.py  professional_ui_robust.py  professional_ui_robust.spec  professional_ui_robust_backup.py  (+25 more)
UNIFIED_ANTIVIRUS/config/: README.md  client_id.txt  config_validator.py  plugins_config.json  unified_config.toml  (+3 more)
config/: ui_settings.json
(+299 files in other folders)
